--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,19 +9,27 @@ environment:
 dependencies:
   animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
+  avatar_glow: ^3.0.1
+  awesome_notifications: ^0.9.3+1
   cloud_firestore: ^4.17.3
   firebase_auth: ^4.19.5
   firebase_core: ^2.31.0
   firebase_storage: ^11.7.5
   flutter:
     sdk: flutter
+  flutter_background_service: ^5.0.5
+  flutter_background_service_android: ^6.2.2
+  flutter_local_notifications: ^17.1.2
   flutter_screenutil: ^5.9.0
   google_maps_flutter: ^2.6.1
   image_picker: ^1.1.1
+  intl: ^0.19.0
   location: ^6.0.1
   lottie: ^3.1.0
   permission_handler: ^11.3.1
+  shared_preferences: ^2.2.3
   slider_button: ^2.1.0
+  speech_to_text: ^6.6.0
 
 dev_dependencies:
   flutter_test:
