--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   flutter_screenutil: ^5.9.0
   google_maps_flutter: ^2.6.1
+  http: ^1.2.1
   image_picker: ^1.1.1
   intl: ^0.19.0
   location: ^6.0.1
