--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@
     dependencies {
          classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10"
+          classpath 'com.google.gms:google-services:4.3.0'
     }
 }
 
